      of xdr (in \file{libtirpc}) provided its header files are in the
      search path: see the \sQuote{R Installation and Administration
	Manual}.
    
      \item \code{mem.limits()} now reports values larger than the
      maximum integer (previously documented to be reported as
      \code{NA}), and allows larger values to be set, including
      \code{Inf} to remove the limit.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
     \item \code{fisher.test()} had a buglet: If arguments were
      factors with unused levels, levels were dropped and you'd get an
      error saying that there should be at least two levels,
      inconsistently with pre-tabulated data.  (Reported by Michael Fay).

      \item \code{package.skeleton()} will no longer dump S4 objects
      supplied directly rather than in a code file.  These cannot be
      restored correctly from the dumped version.
      
      \item Build-time expressions in help files did not have access
      to functions in the package being built (with \command{R CMD build}).  
      
      \item Because \code{quote()} did not mark its result as being in
      use, modification of the result could in some circumstances
      modify the original call.
      
      \item Plotting \code{pch = '.'} now guarantees at least a one-pixel
      dot if \code{cex > 0}.
      
      \item The very-rarely-used command-line option
      \option{--max-vsize} was incorrectly interpreted as a number of
      Vcells and not in bytes as documented.  (Spotted by Christophe
      Rhodes.) 
    }  
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.13.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} no longer translates \code{NA} strings as
      \code{"NA"}.

      \item \code{persp(box = TRUE)} now warns if the surface extends
      outside the box (since occlusion for the box and axes is computed
      assuming the box is a bounding box). (\PR{202}.)
